--- a/index.html
+++ b/index.html
@@ -83,11 +83,16 @@
                         <div class="temp">Night - 25.6&#176; C</div>
                         <div class="temp">Day - 35.6&#176; C</div>
                     </div>
-
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="footer">
+        <div class="creater">Created by Nguyen Thi Ngoc Diep <br>
+            Weather data from OpenWeather</div>
+    </div>
+
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
